--- a/DXAutoFillData/DXAutoFillData.csproj
+++ b/DXAutoFillData/DXAutoFillData.csproj
@@ -32,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="DevExpress.BonusSkins.v17.1" />
     <Reference Include="DevExpress.Data.v17.1" />
@@ -91,12 +92,6 @@
     <Compile Include="UControls\UC_Main.Designer.cs">
       <DependentUpon>UC_Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="UControls\UC_ViewData.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UControls\UC_ViewData.Designer.cs">
-      <DependentUpon>UC_ViewData.cs</DependentUpon>
-    </Compile>
     <Compile Include="UControls\UC_WebBrowser.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -127,13 +122,9 @@
     <EmbeddedResource Include="UControls\UC_Main.resx">
       <DependentUpon>UC_Main.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UControls\UC_ViewData.resx">
-      <DependentUpon>UC_ViewData.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UControls\UC_WebBrowser.resx">
       <DependentUpon>UC_WebBrowser.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
