--- a/DXAutoFillData/DXAutoFillData.csproj
+++ b/DXAutoFillData/DXAutoFillData.csproj
@@ -33,6 +33,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DevExpress.BonusSkins.v17.1" />
     <Reference Include="DevExpress.Data.v17.1" />
@@ -99,6 +119,12 @@
     <Compile Include="UControls\UC_ViewData.Designer.cs">
       <DependentUpon>UC_ViewData.cs</DependentUpon>
     </Compile>
+    <Compile Include="UControls\UC_WebBrowser2.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UControls\UC_WebBrowser2.Designer.cs">
+      <DependentUpon>UC_WebBrowser2.cs</DependentUpon>
+    </Compile>
     <Compile Include="UControls\UC_WebBrowser.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -132,9 +158,13 @@
     <EmbeddedResource Include="UControls\UC_ViewData.resx">
       <DependentUpon>UC_ViewData.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UControls\UC_WebBrowser2.resx">
+      <DependentUpon>UC_WebBrowser2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UControls\UC_WebBrowser.resx">
       <DependentUpon>UC_WebBrowser.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
