--- a/DXAutoFillData/DXAutoFillData.csproj
+++ b/DXAutoFillData/DXAutoFillData.csproj
@@ -164,6 +164,7 @@
     <EmbeddedResource Include="UControls\UC_WebBrowser.resx">
       <DependentUpon>UC_WebBrowser.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
