--- a/DXAutoFillData/Properties/Settings.settings
+++ b/DXAutoFillData/Properties/Settings.settings
@@ -18,7 +18,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="SAutoEnterData" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="SAutoClearCache" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
