--- a/DXAutoFillData/Properties/Settings.settings
+++ b/DXAutoFillData/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="IsActive" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SActiveTab" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
